[package]
name = "bert_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
serde = {version = "1.0", features = ["derive"]}
futures = "0.3"
rust-bert = "0.17.0"
chrono = "0.4"
fltk = { version = "^1.3", features = ["fltk-bundled"] }
